--- a/Site/templates/dashboard.html
+++ b/Site/templates/dashboard.html
@@ -138,7 +138,7 @@
     <p class="text-center">
     <strong>Found Dangerous Files</strong>
     </p>
-    <table class="table table-striped">
+    <table class="table table-striped" id="dangerous-files-table">
     <thead>
     <tr>
     <th scope="col">Host</th>
@@ -155,6 +155,11 @@
     </pre>
     </table>
     </div>
+    <div class="col-md-4">
+        <p class="text-center">
+            <strong>Found File Extensions</strong>
+        </p>
+        <canvas id="dangerousChart"></canvas>
     </div>
     </div>
     </div>
@@ -191,9 +196,9 @@
         <p class="text-center">
             <strong>Found File Extensions</strong>
         </p>
-        <canvas id="myChart"></canvas>
+        <canvas id="interestingChart"></canvas>
     </div>
-    <script src="chart-data.js"></script>
+    <!-- <script src="chart-data.js"></script> -->
     </div>
     </div>
     </div>
@@ -225,7 +230,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../static/chart-data.js"></script>
+    <script src="../static/interesting-chart-data.js"></script>
+    <script src="../static/dangerous-chart-data.js"></script>
     </body>
     </html>
     
